# minskk

./: .luarc.json  LICENSE  README.md
lua/: common.lua  kana-tree-logic.lua  kana-tree.lua  minskk.lua  regist-mgr.lua  status.lua  user-dict.lua
lua/state/: direct-input-fwc.lua  direct-input-hfc.lua  direct-input-hwc.lua  direct-input-kana.lua  input-reading.lua  register-word.lua  select-kanji-list.lua  select-kanji.lua
lua/state/conv-map/: katakana.lua  zen-alphanum.lua
lua/state/kana-tree/: common.lua  katakana-map.lua  logic.lua  tree.lua
minskk-core/: Cargo.toml
minskk-core/src/: lib.rs  skk.rs
plugin/: minskk.lua
rust/: Cargo.toml
rust/src/: dict.rs  dict_agent.rs  lib.rs
