[package]
name = "minskk-dict"
version = "0.1.0"
edition = "2021"

[lib]
name = "minskk"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
dirs = "5.0.1"
encoding_rs = "0.8.34"
flate2 = { version = "1.0.30", features = ["zlib-ng"], default-features = false }
libc = "0.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
shellexpand = "3.1.0"

[profile.release]
opt-level = 3
